# deskmux

./: .gitignore  CHANGELOG.md  CONFIG.md  CONTRIBUTING.md  LICENSE  README.md  deskmux.config.example.json  package-lock.json  package.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  release.yml
docs/: COMMIT_CONVENTION.md  CONFIG.md  FIRST_RUN_SETUP.md  NATIVE_DDC_DISCOVERY.md  ROADMAP.md
scripts/: check-js.mjs
src/: index.html  main.js  styles.css  types.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/permissions/: get-api-base-url.toml  probe-input.toml  save-config-draft.toml  validate-config-draft.toml
src-tauri/src/: bootstrap.rs  commands.rs  lib.rs  main.rs  tray.rs
src-tauri/src/api/: apply.rs  bind.rs  client.rs  cors.rs  discovery.rs  events.rs  handlers.rs  mod.rs  peer_orchestration.rs  server.rs  test_server.rs  types.rs
src-tauri/src/config/: draft.rs  error.rs  loader.rs  mod.rs  model.rs  path.rs  validate.rs
src-tauri/src/executor/: backend.rs  discovery.rs  mod.rs  model.rs  native.rs  resolve.rs  runner.rs  windows_ddc.rs
src-tauri/src/hotkeys/: mod.rs
src-tauri/src/orchestrator/: mod.rs  model.rs  peer.rs  plan.rs
src/api/: bootstrap.js  client.js  config-draft.js  (+2 more)
test/: client.test.js  config-draft.test.js  config-error.test.js  discovery.test.js  events.test.js  native-controls.test.js  probe.test.js  setup-checklist.test.js  setup-draft.test.js  setup-names.test.js  setup-session.test.js  setup-status.test.js  summary.test.js
(+14 files in other folders)
