[package]
name = "deskmux"
version = "0.2.0"
description = "DeskMux: config-driven monitor input switching and preset orchestration"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "deskmux_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
async-trait = "0.1"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"

[target.'cfg(windows)'.dependencies]
# Native DDC/CI control (see docs/ROADMAP.md for why windows-rs over ddc-hi/ddc-winapi).
# Target-gated so non-Windows builds never fetch or compile this at all.
windows = { version = "0.62", features = [
    "Win32_Devices_Display",
    "Win32_Graphics_Gdi",
    "Win32_Foundation",
] }

